--- a/README.org
+++ b/README.org
@@ -1,21 +1,12 @@
 
 * Tonal art map implementation for unity
-I wanted to try and make an implementation of the Tonal Art Map
-technique described in [[http://gfx.cs.princeton.edu/proj/hatching/hatching.pdf][this paper]] and this is the result. I wasn't
-totally blown away by the result, so I decided to move on to something
-different, but the effect can look pretty nice when applied to
-something like a flag:
+I updated Oskar's implementation of Tonal Art Maps, based on [[http://gfx.cs.princeton.edu/proj/hatching/hatching.pdf][this paper]]. I ported it to URP and rewrote the rendering and tone value checks to use shaders.
 
 [[images/blender_monkey.png]]
 
-[[https://youtu.be/zPsZoTfC8EI][Higher res version, you can't really see what's going on in this gif]]
-
-The idea is that things like lighting and shading shouldn't look how a
-computer renders them, with gradient colors, but more how an artist
-that does hatching would do it, with varying the amount of hatches.
-This version integrates with Unity's standard lighting pipeline and
-applies the tonal art map as the final step, so that it can benefit
-from the calculation of the lighting.
+The biggest thing missing comared to the source paper is they used 6 tone blending. I did not have time to implement that part of Emil Praun, et al.'s research. I compensated by generating a large number of tone values, though that still does not have quite the desired pencil blending effect.
 
 The project includes both a generator that generates the tonal art map
-as well as a shader that can render it.
+as well as a shader that can render it. The generator can be accessed as an editor window in unity. (Generators>Tonal Art Map Generator)
+
+The generated art maps are not included.
